# amari.py

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  pylint.yml  test.yml  tests.yml  upload.yml
amari/: __init__.py  api.py  cache.py  exceptions.py  objects.py
docs/: amariclient.rst  cache.rst  conf.py  credits.rst  exceptions.rst  getting_an_authorization_token.rst  index.rst  objects.rst  quickstart.rst  requirements.txt
examples/: cache.py  compare_users.py  find_highest_role_reward.py
tests/: test_package.py
