[metadata]
name = amari.py
version = attr: amari.__version__
url = https://github.com/TheF1ng3r/amari.py
author = TheF1ng3r
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
license_file = LICENSE
description = An asynchronous API wrapper for the Amari API.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8; variant=GFM
project_urls =
    Documentation = https://amaripy.readthedocs.io/en/latest/

[options]
packages = amari,
install_requires =
    aiohttp>=3.6.0,<3.8.0
    asyncache>0.1.0
    cachetools>=2.1
    
python_requires = >=3.8
