[metadata]
name = amari-api.py
version = attr: amari.__version__
url = https://github.com/RayyanW786/amaripy
author = RayyanW786
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
license = MIT
license_files = LICENSE,
description = An asynchronous API wrapper for the Amari API.
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    Documentation = https://amaripy.readthedocs.io/en/latest/

[options]
packages = amari,
install_requires =
    aiohttp>=3.7.4,<4.0.0
python_requires = >=3.9, <4
include_package_data = True

[options.packages.find]
where = .


